@@ -7,6 +7,11 @@ REST API
 * "/system" URI returns the version of the Orthanc REST API
 * added ?expand argument to /peers and /modalities routes
 
+Maintenance
+-----------
+
+* Fix to allow creating DICOM instances with empty Specific Character Set (0008,0005)
+
 
 Version 1.3.1 (2017-11-29)
 ==========================
